# game_theory_experiment

./: .gitignore  CMakeLists.txt  LICENSE  compile.sh  readme.md
include/: agent.h  agent.hpp  board.h  board.hpp
src/: agent.cpp  board.cpp  main.cpp
